--- a/app/views/countries/index.html.erb
+++ b/app/views/countries/index.html.erb
@@ -4,20 +4,54 @@
 	<ol><% @user.countries.uniq.each do |country| %>
 		
 		<strong><li><%= link_to country.name, country %></li><strong>	
-		<a href="#" id="see_more" data-id="<%=country.id%>">(See More...)</a>
-		<p id="cont-<%= country.id%>-name"></p>
-		<p id="cont"class="hidden">Continent: <%= country.continent%></p>
-		<p id="city" class="hidden">City: <%= country.city%></p>
+		<a href="#" class="see_more" data-id="<%=country.id%>">(See More...)</a>
+
+		<ul id="cont-<%= country.id%>"></ul>
+	
 		
 		
 
-		<a href="#" id="see_less" onclick="see_less();"data-id="<%=country.id%>"class="hidden">(See Less...)</a>
+		<a href="#" class="see_less" onclick="see_less();" data-id="<%=country.id%>">(See Less...)</a>
 	<%end %></ol>
 </div>
 
 <br>
 
 <br>
+
+<script type="text/javascript">
+	
+	$('.see_more').on('click', function(e) {
+		
+	  e.preventDefault();
+	  var id = $(this).data('id')
+
+	  $.get('/countries/' + id + '.json', function(datas){
+		data = datas["data"].attributes
+	    $("#cont-" + id).prepend("<li>" + data["continent"] + "</li>");
+	    $("#cont-" + id).prepend("<li>" + data["city"] + "</li>");
+	    //$('.see_less').fadeToggle();
+
+	   //$('.see_more').addClass('hidden');
+	  
+	 
+  })
+})
+//
+
+function see_less(){
+
+	var id = $(this).data('id')
+	$.get('/countries/' + id + '.json', function(datas){
+   	 data = datas["data"].attributes
+      $("#cont-" + id).addClass('hidden');
+      $('.cont-' + id).addClass('hidden');
+      	$('.see_more').removeClass('hidden');
+     
+	})
+}
+
+</script>
 
 
 
