--- a/app/views/visits/_form.html.erb
+++ b/app/views/visits/_form.html.erb
@@ -11,7 +11,7 @@
 	  <%= f.date_select :visit_date, :discard_hours => true%>
 	  <br>
 	  <br>
-	  <%= f.submit "Add", data: { disable_with: false }%>
+	  <%= f.submit "Add"%>
 	<% end %>
 </form>
 
