--- a/app/views/buckets/_bucket.html.erb
+++ b/app/views/buckets/_bucket.html.erb
@@ -5,17 +5,16 @@
 			<label><input type="checkbox" name="checkbox" id="checkbox" class="checkbox" data-toggle="checkbox"></input>
 
 
-				<del><strong name="check_count" class="check_count" id="check_count"><%= link_to bucket.country, bucket %></strong></del>
+				<del><strong name="check_count" class="check_count" id="check_count"><%= link_to bucket.country, bucket, data: { turbolinks: false }  %></strong></del>
 
 
-			<div id="del_ete"><%= button_to "Delete", bucket, :method => :delete, data: {confirm: 'Are you sure?'} %></div></label>
+			<div id="del_ete"><%= button_to "TRAVELLED!", bucket, :method => :delete, data: {confirm: 'Are you sure you want to check off this country?'} %></div></label>
 			 
 			  <br>
 		 <% end %>
 	<%end %>
 	<br>
 	
-	 <input id="removecount"type="submit" value="Check TRAVELLED" onclick="is_checked();">
 	
 
 </h5>
