--- a/app/views/buckets/index.html.erb
+++ b/app/views/buckets/index.html.erb
@@ -9,7 +9,7 @@
 <br>
 
 
-<p> These are the countries you want to travel to. If you have travelled to any of the below, check it off and click "TRAVELLED".</p>
+<p> These are the countries you want to travel to. If you have travelled to any of the below, check it off and click "TRAVELLED". You can then add the country to your travelled list under <a href="/countries">Countries</a></p>
 <div class = "checkbox">
 
 	<%= render "bucket" %>
