--- a/app/views/buckets/_bucket.html.erb
+++ b/app/views/buckets/_bucket.html.erb
@@ -1,14 +1,15 @@
 
 	<h5><% @buckets.each do |bucket| %>
 		<% if bucket.country.present? %>
-		
+			<div>
 			<label><input type="checkbox" name="checkbox" id="checkbox" class="checkbox" data-toggle="checkbox"></input>
 
 
-				<del><strong name="check_count" class="check_count" id="check_count"><%= link_to bucket.country, bucket, data: { turbolinks: false }  %></strong></del>
+				<del><strong name="check_count" class="check_count" id="check_count"><%= link_to bucket.country, bucket, data: { turbolinks: false }  %></strong></del></label>
 
 
-			<div id="del_ete"><%= button_to "TRAVELLED!", bucket, :method => :delete, data: {confirm: 'Are you sure you want to check off this country?'} %></div></label>
+			<div id="del_ete"><%= button_to "TRAVELLED!", bucket, :method => :delete, data: {confirm: 'Are you sure you want to check off this country?'} %></div>
+		</div>
 			 
 			  <br>
 		 <% end %>
