--- a/app/views/countries/show.html.erb
+++ b/app/views/countries/show.html.erb
@@ -16,7 +16,7 @@
 	<%= link_to "Add To Sites Visited", "#"%>
 </div>
 <div id="visit-section">
-	<p><%= render "visits/form", data: { turbolinks: false }  %></p>
+	<p><%= render "visits/form", data: { turbolinks: true}  %></p>
 	<br>
 </div>
 
