--- a/app/assets/stylesheets/body.css
+++ b/app/assets/stylesheets/body.css
@@ -13,12 +13,11 @@ body {
 	padding: 0px;
 }
 
-.image {
+.mySlides {
 	padding-top: 50px;
-	padding-left: 350px;
-	padding-bottom: 200px;
-	height: 90px;
-	width: 200px;
+	padding-left: 110px;
+	padding-bottom: 100px;
+	
 }
 
 .title {
@@ -46,7 +45,9 @@ body {
   color: black;
   font-family: Helvetica, Garamond, sans-serif;
   font-style: italic; 
+
 }
+
 .see_more{
   font-size: 10px;
   padding: 10px;
@@ -105,3 +106,5 @@ div.flip-control {
 div.flip-control a {
     margin-left: 10px;
 }
+
+
