--- a/app/views/buckets/show.html.erb
+++ b/app/views/buckets/show.html.erb
@@ -1,22 +1,23 @@
+<div class="content">
+	<div id=samp>
+		<h1 class="bucketCountry">Country: <%= @bucket.country %></h1>
+		<p class="bucketContinent">Continent: <%= @bucket.continent %></p>
+		<p class="bucketCity">Cities you want to visit: <%= @bucket.city %></p>
+		<p class="bucketDescription">Description: <%= @bucket.description %></p>
+		<br>
+		<br>
+	</div>
 
-<div id=samp>
-	<h1 class="bucketCountry">Country: <%= @bucket.country %></h1>
-	<p class="bucketContinent">Continent: <%= @bucket.continent %></p>
-	<p class="bucketCity">Cities you want to visit: <%= @bucket.city %></p>
-	<p class="bucketDescription">Description: <%= @bucket.description %></p>
-	<br>
-	<br>
-</div>
 
 
+	<div class="flip-control">
+		<% if !@bucket.id.nil?%>
+			<button  class="previous" data-id="<%=@bucket.id%>">Previous Country</button>
+	    	<button class="next" data-id="<%=@bucket.id%>">Next Country</button>
+	    <% end %>
+		<button class="back"> Back </button>
+		<button><%= link_to "Edit", edit_bucket_path %></button>
 
-<div class="flip-control">
-	<% if !@bucket.id.nil?%>
-		<button  class="previous" data-id="<%=@bucket.id%>">Previous Country</button>
-    	<button class="next" data-id="<%=@bucket.id%>">Next Country</button>
-    <% end %>
-	<button class="back"> Back </button>
-	<button><%= link_to "Edit", edit_bucket_path %></button>
-
+	</div>
 </div>
 
