--- a/app/assets/stylesheets/body.css
+++ b/app/assets/stylesheets/body.css
@@ -24,6 +24,7 @@ body {
 	color: #00008B;
 	font-family: Helvetica, Garamond, sans-serif; 
   font-style: bold;
+  font-size: 40px;
 }
 
 html {
@@ -107,4 +108,40 @@ div.flip-control a {
     margin-left: 10px;
 }
 
+.edit {
+  display: inline-block;
+  border-radius: 2px;
+  background-color: #D8D8D8;
+  border: none;
+  color: black;
+  text-align: center;
+  font-size: 14px;
+  padding: 10px;
+  width: 150px;
+  transition: all 0.5s;
+  cursor: pointer;
+  margin: 2px;
+
+}
+
+
+.content {
+    background-color: #F8F8F8;
+    width: 500px;
+    padding: 25px;
+}
+
+.bucket{
+  background-color: white;
+  width: 700px;
+  padding: 25px;
+
+}
+
+.country {
+  background-color: #F8F8F8;
+  width: 300px;
+  padding: 25px;
+
+}
 
