--- a/app/views/countries/index.html.erb
+++ b/app/views/countries/index.html.erb
@@ -1,6 +1,7 @@
 
 	<h2 class= 'title'> Countries Travelled </h2>
-<div class="country"
+		
+<div class="country">
 	<div>
 		<ol><% @user.countries.uniq.each do |country| %>
 			
@@ -9,21 +10,19 @@
 
 			<ul id="cont-<%= country.id%>"></ul>
 		
-			
-			
+	
+
+
 
 			<a href="#" class="see_less" onclick="see_less();" data-id="<%=country.id%>">(See Less...)</a>
 		<%end %></ol>
 	</div>
 
 	<br>
-
 	<br>
-
-
-
-
 	<h5>Log a New<a href="/countries/new"> Country. </a></h5>
 	<h5> Go to <a href="/continents"> Continents. </a></h5>
 </div>
+
+
 
