--- a/app/views/countries/show.html.erb
+++ b/app/views/countries/show.html.erb
@@ -4,13 +4,11 @@
 		<br>
 		<a href="#" class="back"> Back </a>
 	</div>
-	<br>
-		
 
 
 	<div class="countryname">
-		<h4 class="countryCont"> <%= @country.continent%></h4>
-		<h5 class="countryName"> Country Visited: <%= @country.name%> </h5>
+		<h3 class="countryCont"> <%= @country.name%></h3>
+		<h5 class="countryName"> Continent: <%= @country.continent%> </h5>
 		<h5 class="countryCity"> Cities you toured: <%= @country.city%></h5>
 		<h5 class="countryDescript">Description: <%= @country.description%></h5>
 	</div>
