--- a/app/views/static/home.html.erb
+++ b/app/views/static/home.html.erb
@@ -1,18 +1,19 @@
 <h2 class= 'title'> Welcome <%= current_user.name %>!</h2>
+<div class = "home">
+  <p> Travel door is at your fingertips as you travel around the world and cross countries off your bucket list. You can view a list of continents and a brief background of each. You can add countries to the countries you have visited thus far and have your own personal list. AND you can add countries you want to visit!</p>
 
-<p> Travel door is at your fingertips as you travel around the world and cross countries off your bucket list. You can view a list of continents and a brief background of each. You can add countries to the countries you have visited thus far and have your own personal list. AND you can add countries you want to visit!</p>
+  <p> To learn interesting facts on the continents around the world click <a href="/continents">here! </a></p>
 
-<p> To learn interesting facts on the continents around the world click <a href="/continents">here! </a></p>
+  <p> To keep track of the countries you visited click <a href="/countries">here! </a></p>
+  <p> To log a country to your list click <a href="/countries/new">here! </a></p> 
+  <p> Add to your <a href="/buckets">Bucket List! </a></p>
 
-<p> To keep track of the countries you visited click <a href="/countries">here! </a></p>
-<p> To log a country to your list click <a href="/countries/new">here! </a></p> 
-<p> Add to your <a href="/buckets">Bucket List! </a></p>
-
+</div>
 
 
 
 <div class="w3-content w3-display-container">
-  <img class="mySlides" src="http://swdistrict.org/wp-content/uploads/2017/07/big-globe-and-hands.png">
+
   <img class="mySlides" src="https://www.planetware.com/photos-large/F/eiffel-tower.jpg">
   <img class="mySlides" src="https://static.vinepair.com/wp-content/uploads/2017/06/iceland-summer-solstice-inside.jpg">
   <img class="mySlides" src="https://amp.thisisinsider.com/images/58936e390849ec1a008b4619-750-563.jpg">
