--- a/app/views/continents/index.html.erb
+++ b/app/views/continents/index.html.erb
@@ -1,7 +1,11 @@
 <h2 class= 'title'> Continents </h2>
-<ol><% @continents.each do |continent| %>
-	<li><%= link_to continent.name, continent %></li>
-<%end %></ol>
+<br>
+<br>
+<ul><% @continents.each do |continent| %>
+	<button class="continent"><%= link_to continent.name, continent %></button>
+<%end %>
+<br>
+</ul>
 <br>
 <%= image_tag("https://mbtskoudsalg.com/images/continent-of-africa-png-7.png", :alt => "Continents") %>
 <br>
