changing ajax on visit

--- a/app/views/countries/show.html.erb
+++ b/app/views/countries/show.html.erb
@@ -18,7 +18,7 @@
 		<button class= "edit"><%= link_to "Add To Sites Visited", "#"%></button>
 	</div>
 	<div id="visit-section">
-		<p><%= render "visits/form", data: { turbolinks: true}  %></p>
+		<p><%= render "visits/form"%></p>
 		<br>
 	</div>
 
