adding prototype to bucket

--- a/app/views/buckets/_bucket.html.erb
+++ b/app/views/buckets/_bucket.html.erb
@@ -5,7 +5,7 @@
 			<label><input type="checkbox" name="checkbox" id="checkbox" class="checkbox" data-toggle="checkbox"></input>
 
 
-				<del><strong name="check_count" class="check_count" id="check_count"><%= link_to bucket.country, bucket, data: { turbolinks: false }  %></strong></del></label>
+				<del><strong name="check_count" class="check_count" id="check_count"><%= link_to bucket.country, bucket %></strong></del></label>
 
 
 			<div id="del_ete"><%= button_to "TRAVELLED!", bucket, :method => :delete, data: {confirm: 'Are you sure you want to check off this country?'} %></div>
@@ -21,11 +21,13 @@
 </h5>
 
 <script type="text/javascript">
-
 </script>
 
 
 
 
 
-<%# Include more info button in this section for %>
+
+
+
+
