--- a/app/views/countries/index.html.erb
+++ b/app/views/countries/index.html.erb
@@ -1,7 +1,10 @@
 
 	<h2 class= 'title'> Countries Travelled </h2>
 		
-<div class="country">
+
+	<div><img class="roadSlide" src="https://img00.deviantart.net/e42a/i/2012/180/6/f/road_png_stock_by_doloresdevelde-d55c9nc.png">
+      </div>
+    <div class="country">
 	<div>
 		<ol><% @user.countries.uniq.each do |country| %>
 			
