form updates with prototype

--- a/app/views/buckets/index.html.erb
+++ b/app/views/buckets/index.html.erb
@@ -21,7 +21,7 @@
 		<%= render "bucket" %>
 	</div>
 
-	<%= will_paginate @buckets, :page_links => false %>
+	<%#= will_paginate @buckets, :page_links => false %>
 
 
 	<br>
