--- a/app/views/visits/_countryvisit.html.erb
+++ b/app/views/visits/_countryvisit.html.erb
@@ -1,7 +1,7 @@
 <% @country.visits.each do |visit| %>
 	<% if visit.visit_places.present? %>
 
-		<h5 class="visit">Place Visited: <%= link_to visit.visit_places, country_visit_path(visit.country, visit) %></h5>
+		<h5>Place Visited: <%= link_to visit.visit_places, country_visit_path(visit.country, visit) %></h5>
 			
 	    <h5>Date: <%= visit.visit_date.strftime("%m/%d/%Y")%></h5>
 	 
