--- a/app/views/buckets/_bucket.html.erb
+++ b/app/views/buckets/_bucket.html.erb
@@ -2,7 +2,7 @@
 	<h5><% @buckets.each do |bucket| %>
 		<% if bucket.country.present? %>
 			<div>
-			<label><input type="checkbox" name="checkbox" id="checkbox" class="checkbox" data-toggle="checkbox"></input>
+			<label><input type="checkbox" name="checkbox" id="checkbox" data-toggle="checkbox"></input>
 
 
 				<del><strong name="check_count" class="check_count" id="check_count"><%= link_to bucket.country, bucket %></strong></del></label>
