--- a/app/views/buckets/_index_form.html.erb
+++ b/app/views/buckets/_index_form.html.erb
@@ -19,7 +19,7 @@
 	  <%= f.text_field :country %>
 	  <br>
 	  <br>
-	  <%= f.submit "submit" %>
+	  <%= f.submit "submit", :id=> 'submit_now', data: { disable_with: false }%>
 	</div>
   
 <% end %> 
