--- a/app/views/buckets/index.html.erb
+++ b/app/views/buckets/index.html.erb
@@ -6,7 +6,7 @@
 	<p><strong> You can add a country to your bucket list, then go edit it, to add cities/places you want to visit, later by clicking on the country.</strong> </p>
 
 	<div>
-	<%= render "index_form", data: { turbolinks: true } %>
+	<%= render "index_form" %>
 	</div>
 
 	<br>
