--- a/app/views/buckets/index.html.erb
+++ b/app/views/buckets/index.html.erb
@@ -5,7 +5,7 @@
 <div class= "bucket">
 	<p><strong> You can add a country to your bucket list, then go edit it, to add cities/places you want to visit, later by clicking on the country.</strong> </p>
 
-	<div>
+	<div class = "indexForm">
 	<%= render "index_form" %>
 	</div>
 
