--- a/app/views/buckets/_bucket.html.erb
+++ b/app/views/buckets/_bucket.html.erb
@@ -8,7 +8,7 @@
 				<del><strong name="check_count" class="check_count" id="check_count"><%= link_to bucket.country, bucket %></strong></del></label>
 
 
-			<div id="del_ete"><%= button_to "TRAVELLED!", bucket, :method => :delete, data: {confirm: 'Are you sure you want to check off this country?'} %></div>
+			<div id="del_ete" visibility:hidden><%= button_to "TRAVELLED!", bucket, :method => :delete,  data: {confirm: 'Are you sure you want to check off this country?'}, id: bucket.id %></div>
 		</div>
 			 
 			  <br>
