--- a/app/assets/stylesheets/body.css
+++ b/app/assets/stylesheets/body.css
@@ -3,7 +3,7 @@ body {
   padding-top: 20px;
   padding-bottom: 30px;
   background-color:#E0FFFF;
-  background-image:url(http://www.tinebech.com/rw_common/themes/flood/images/editable_images/body-radial-left.png); 
+  background-image:url(https://www.eedesignit.com/wp-content/uploads/2016/06/grayBack.jpg); 
   background-size: cover;
   font-family: Helvetica, Garamond, sans-serif; 
   color: #40404
