html string literal

--- a/app/views/static/home.html.erb
+++ b/app/views/static/home.html.erb
@@ -1,4 +1,4 @@
-<h2 class= 'title'> Welcome <%= current_user.name.capitalize! %>!</h2>
+<h2 class= 'title'> Welcome <%= current_user.name.titleize %>!</h2>
 <div class = "home">
   <p> Travel door is at your fingertips as you travel around the world and cross countries off your bucket list. You can view a list of continents and a brief background of each. You can add countries to the countries you have visited thus far and have your own personal list. AND you can add countries you want to visit!</p>
 
