--- a/app/views/buckets/show.html.erb
+++ b/app/views/buckets/show.html.erb
@@ -1,6 +1,6 @@
 <div class="content">
 	<div id=samp>
-		<h1 class="bucketCountry"><%= @bucket.country %></h1>
+		<h1 id=@bucket.id class="bucketCountry"><%= @bucket.country %></h1>
 		<p class="bucketContinent">Continent: <%= @bucket.continent %></p>
 		<p class="bucketCity">Cities you want to visit: <%= @bucket.city %></p>
 		<p class="bucketDescription">Description: <%= @bucket.description %></p>
