--- a/app/views/buckets/_bucket.html.erb
+++ b/app/views/buckets/_bucket.html.erb
@@ -1,5 +1,5 @@
 
-	<h5><% @buckets.each do |bucket| %>
+	<div><% @buckets.each do |bucket| %>
 		<% if bucket.country.present? %>
 			<div>
 			<label><input type="checkbox" name="checkbox" id="checkbox" data-toggle="checkbox"></input>
@@ -18,7 +18,7 @@
 	
 	
 
-</h5>
+</div>
 
 <script type="text/javascript">
 </script>
