--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,7 +31,7 @@
           <ul class="nav navbar-nav">
             <% if user_signed_in? %>
               <li><a href="/continents"> Continents </a></li>
-              <li><a href="/countries"> Countries </a></li>
+              <li class="count"><a href="/countries"> Countries </a></li>
               <li><a href="/buckets"> Bucket List </a></li>
               <li><a href="/settings">Account Settings</a></li>
               <li><%= link_to "Log Out", destroy_user_session_path, method: :delete %>
