--- a/app/views/countries/index.html.erb
+++ b/app/views/countries/index.html.erb
@@ -10,7 +10,7 @@
 			
 			<strong><li><%= link_to country.name, country, id: country.id %></li></strong>	
 			<br>
-			
+		
 			<!-- <a href="#" class="see_more" data-id="<%=country.id%>">(See More...)</a>
 
 			<ul id="cont-<%= country.id%>"></ul>
@@ -20,8 +20,8 @@
 		<%end %></ol>
 	</div>
 
-<!-- 	<h5>Log a New<a href="/countries/new"> Country. </a></h5>
-	<h5> Go to <a href="/continents"> Continents. </a></h5> -->
+	<h5><a href="/countries/new"> Log a New Country. </a></h5>
+	<h5> Go to <a href="/continents"> Continents. </a></h5>
 </div>
 
 
