--- a/app/views/countries/_form.html.erb
+++ b/app/views/countries/_form.html.erb
@@ -15,6 +15,7 @@
 
 <%= form_for @country do |f| %>
 <div>
+  <%= f.hidden_field :user_id, :value => current_user.id %>
   <%= f.label :'What continent did you visit?' %>
   <br>
   <%= f.text_field :continent %>
