get country update

--- a/app/views/countries/index.html.erb
+++ b/app/views/countries/index.html.erb
@@ -6,16 +6,16 @@
       </div>
     <div class="country">
 	<div>
-		<ol><% @user.countries.uniq.each do |country| %>
+		<!-- <ol><% @user.countries.uniq.each do |country| %>
 			
 			<strong><li><%= link_to country.name, country, id: country.id %></li></strong>	
 			<br>
 	
-		<%end %></ol>
+		<%end %></ol> -->
 	</div>
 
-	<h5><a href="/countries/new"> Log a New Country. </a></h5>
-	<h5> Go to <a href="/continents"> Continents. </a></h5>
+	<!-- <h5><a href="/countries/new"> Log a New Country. </a></h5>
+	<h5> Go to <a href="/continents"> Continents. </a></h5> -->
 </div>
 
 
